templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: / 
        backend:
          serviceName: kubia
          servicePort: 80
